# FP-game

./: .gitignore  README.md  gloss-counter.cabal  puck-man.cabal  stack.yaml
.stack-work/: stack.sqlite3
assets/animations/ghost/: Blinky.aseprite  Clyde.aseprite  Pinky.aseprite
assets/collectibles/: dots.aseprite
assets/walls/: Walls.aseprite
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/tmp/src-7724/OpenGLRaw-3.3.4.1/: OpenGLRaw.cabal
level/: 1.txt  2.txt  3.txt  4.txt  5.txt  level.txt
level/custom/: 1.txt  2.txt
score/: highscores.txt
src/: Ai.hs  Animation.hs  Collidable.hs  Constants.hs  Controller.hs  File.hs  Ghost.hs  Level01.txt  Main.hs  Maze.hs  Model.hs  Move.hs  Moveable.hs  Player.hs  Score.hs  View.hs  World.hs
src/Controller/: Controller.hs
src/Maze/: Maze.hs
src/Model/: Ai.hs  Collidable.hs  Constants.hs  Ghost.hs  Maze.hs  Model.hs  Move.hs  Player.hs  Score.hs  Spawning.hs
src/Sprites/walls/: Walls.aseprite
src/View/: Animation.hs  File.hs  Input.hs  Menu.hs  Random.hs  View.hs  World.hs
