name:                puck-man
version:             0.0.1
author:              Jort Willemsen, Annemae van de Hoef
maintainer:          j.h.willemsen@students.uu.nl, a.b.a.vandehoef@students.uu.nl
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable puck-man
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random
  hs-source-dirs:      src
  other-modules:       Controller
                     , Model
                     , View
                     , Maze
                     , Player
                     , Move
                     , Ghost
                     , Score
                     , File
                     , World
  default-language:    Haskell2010
