name:                puck-man
version:             0.0.1
author:              Jort Willemsen, Annemae van de Hoef
maintainer:          j.h.willemsen@students.uu.nl, a.b.a.vandehoef@students.uu.nl
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable puck-man
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       containers,
                       random
  hs-source-dirs:      src
  other-modules:       Controller.Controller
                     , Model.Model
                     , View.View
                     , Model.Collidable
                     , Model.Maze
                     , Model.Player
                     , Model.Move
                     , Model.Ghost
                     , Model.Score
                     , Model.Constants
                     , View.File
                     , View.World
                     , View.Animation
                     , View.Input
                     , View.Random
  default-language:    Haskell2010
